k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway-service
  namespace: apigateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigateway-service
  template:
    metadata:
      labels:
        app: apigateway-service
    spec:
      containers:
        - name: apigateway-service
          image: roin09/apigateway-service:latest
          ports:
            - containerPort: 8080
