k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: apigateway-service
  namespace: apigateway
spec:
  selector:
    app: apigateway-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
